[gd_scene load_steps=10 format=3 uid="uid://qb61jx4yfmde"]

[ext_resource type="Script" path="res://Scripts/Code_acces.gd" id="1_0qfep"]
[ext_resource type="StyleBox" uid="uid://cvmbrhdm8q41b" path="res://Themes/Code_acces.tres" id="2_2hmpj"]
[ext_resource type="Theme" uid="uid://7o0kntx0sw2k" path="res://Themes/Parcours/boutons.tres" id="3_3xflg"]
[ext_resource type="PackedScene" uid="uid://cqk5ko4ngpicy" path="res://Scenes/tableau_des_options.tscn" id="4_5m0iy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tjojc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cv2t6"]

[sub_resource type="SystemFont" id="SystemFont_xn8rq"]
font_names = PackedStringArray("Arial")
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_jovb7"]
default_font = SubResource("SystemFont_xn8rq")

[sub_resource type="SystemFont" id="SystemFont_b31am"]
font_names = PackedStringArray("Arial")
subpixel_positioning = 0

[node name="CodeAcces" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0qfep")

[node name="Panel_code" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Panel_code"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.996078, 0.839216, 0.462745, 1)

[node name="MarginContainer" type="MarginContainer" parent="Panel_code/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
auto_translate = false
localize_numeral_system = false
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel_code/ColorRect/MarginContainer"]
layout_mode = 2

[node name="Label_zone_adulte" type="Label" parent="Panel_code/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "ZONE RESERVE AUX ADULTES"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel_code/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxFlat_tjojc")

[node name="Label_code" type="Label" parent="Panel_code/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Veuillez saisir le code d'acc√®s"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Panel_code/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxFlat_tjojc")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel_code/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.44
alignment = 1

[node name="LineEdit1" type="LineEdit" parent="Panel_code/ColorRect/MarginContainer/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
mouse_default_cursor_shape = 7
shortcut_context = NodePath(".")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("2_2hmpj")

[node name="VSeparator" type="VSeparator" parent="Panel_code/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxFlat_cv2t6")

[node name="LineEdit2" type="LineEdit" parent="Panel_code/ColorRect/MarginContainer/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
mouse_default_cursor_shape = 7
shortcut_context = NodePath("../LineEdit1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("2_2hmpj")

[node name="VSeparator2" type="VSeparator" parent="Panel_code/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxFlat_cv2t6")

[node name="LineEdit3" type="LineEdit" parent="Panel_code/ColorRect/MarginContainer/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
mouse_default_cursor_shape = 7
shortcut_context = NodePath("../LineEdit1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("2_2hmpj")

[node name="VSeparator3" type="VSeparator" parent="Panel_code/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxFlat_cv2t6")

[node name="LineEdit4" type="LineEdit" parent="Panel_code/ColorRect/MarginContainer/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
mouse_default_cursor_shape = 7
shortcut_context = NodePath("../LineEdit1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("2_2hmpj")

[node name="HSeparator3" type="HSeparator" parent="Panel_code/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxFlat_tjojc")

[node name="btn_entrer" type="Button" parent="Panel_code/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_3xflg")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
text = "Entrer"

[node name="Panel_personnalisation" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Panel_personnalisation"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.996078, 0.839216, 0.462745, 1)

[node name="MarginContainer" type="MarginContainer" parent="Panel_personnalisation/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Panel_personnalisation/ColorRect/MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_jovb7")

[node name="Label_options" type="Label" parent="Panel_personnalisation/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Options"
horizontal_alignment = 1

[node name="TableauDesOptions" parent="Panel_personnalisation/ColorRect/MarginContainer/VBoxContainer" instance=ExtResource("4_5m0iy")]
layout_mode = 2
size_flags_vertical = 3

[node name="btn_exit" type="Button" parent="Panel_personnalisation/ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("3_3xflg")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_b31am")
theme_override_font_sizes/font_size = 24
text = "Quitter"
